# kinnector-core

./: .gitignore  CMakeLists.txt  README.md
.git-history/: FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
.git-history/logs/refs/heads/: main
.git-history/logs/refs/remotes/origin/: HEAD  main
.git-history/objects/pack/: pack-30eb51cc73453728efd6a1684fc4a7deecf34d66.idx  pack-30eb51cc73453728efd6a1684fc4a7deecf34d66.pack  pack-30eb51cc73453728efd6a1684fc4a7deecf34d66.rev
.git-history/refs/heads/: main
.git-history/refs/original/refs/heads/: main
include/kinnector/: ffi.h  ipc.h  telemetry.h
src/: ffi.cpp  ipc.cpp  telemetry.cpp
src/linux/: ebpf_loader.cpp  ebpf_loader.h  fanotify.cpp  fanotify.h  linux_ipc.cpp  linux_ipc.h  test_ipc.cpp  test_lsm.cpp  warden_helper.cpp
src/linux/ebpf/: kinnector.bpf.c
src/windows/: clipboard_helper.cpp  driver_helper.cpp  driver_helper.h  etw_consumer.cpp  etw_consumer.h  runner.cpp  windows_ipc.cpp  windows_ipc.h
